# superbowl-football-squares

./: README.md  pyproject.toml  summarize.py
super_bowl_box_scores/: sb_1.csv  sb_10.csv  sb_11.csv  sb_12.csv  sb_13.csv  sb_14.csv  sb_15.csv  sb_16.csv  sb_17.csv  sb_18.csv  sb_19.csv  sb_2.csv  sb_20.csv  sb_21.csv  sb_22.csv  sb_23.csv  sb_24.csv  sb_25.csv  sb_26.csv  sb_27.csv  sb_28.csv  sb_29.csv  sb_3.csv  sb_30.csv  sb_31.csv  sb_32.csv  sb_33.csv  sb_34.csv  sb_35.csv  sb_36.csv  sb_37.csv  sb_38.csv  sb_39.csv  sb_4.csv  sb_40.csv  sb_41.csv  sb_42.csv  sb_43.csv  sb_44.csv  sb_45.csv  (+18 more)
